[gd_scene load_steps=4 format=3 uid="uid://c16d7nl71sql7"]

[ext_resource type="Script" uid="uid://dxk2dma0107bg" path="res://scripts/Event.gd" id="1_3n6jn"]
[ext_resource type="Texture2D" uid="uid://cek7k4hpojguq" path="res://images/ChatGPT Image Apr 4, 2025, 10_46_52 PM.png" id="2_bpv23"]
[ext_resource type="Theme" uid="uid://csi2vfognbsw4" path="res://misc/BttnTheme.tres" id="3_f8kss"]

[node name="Event" type="Node2D"]
script = ExtResource("1_3n6jn")

[node name="Window" type="Window" parent="."]
title = "Event!"
initial_position = 1
size = Vector2i(500, 500)

[node name="backgrnd" type="Sprite2D" parent="Window"]
position = Vector2(246.5, 246.5)
scale = Vector2(0.518555, 0.518555)
texture = ExtResource("2_bpv23")

[node name="header" type="RichTextLabel" parent="Window"]
offset_left = 86.0
offset_top = 30.0
offset_right = 422.0
offset_bottom = 70.0
text = "Civil Unrest Has Lead to Rioting!"

[node name="ColorRect" type="ColorRect" parent="Window"]
offset_left = 89.0
offset_top = 79.0
offset_right = 428.0
offset_bottom = 275.0
color = Color(0.230315, 0.230315, 0.230315, 1)

[node name="desc" type="RichTextLabel" parent="Window/ColorRect"]
layout_mode = 0
offset_left = -4.0
offset_top = 21.0
offset_right = 346.0
offset_bottom = 192.0
text = "frustration over lockdowns, economic hardship, and government response has sparked violent protests in major cities. Citizens are rioting, demanding change as tensions reach a breaking point. The crisis threatens to spiral unless action is taken.

"

[node name="Button" type="Button" parent="Window"]
offset_left = 175.0
offset_top = 313.0
offset_right = 345.0
offset_bottom = 348.0
theme = ExtResource("3_f8kss")
text = "Send the local Police"

[node name="Button2" type="Button" parent="Window"]
offset_left = 143.0
offset_top = 369.0
offset_right = 392.0
offset_bottom = 404.0
theme = ExtResource("3_f8kss")
text = "Send the international Military"

[node name="Button3" type="Button" parent="Window"]
offset_left = 121.0
offset_top = 432.0
offset_right = 400.0
offset_bottom = 467.0
theme = ExtResource("3_f8kss")
text = "Let the people express themselves"

[connection signal="close_requested" from="Window" to="." method="_on_window_close_requested"]
[connection signal="pressed" from="Window/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Window/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Window/Button3" to="." method="_on_button_3_pressed"]
